--- a/tex/writeupLab4.tex
+++ b/tex/writeupLab4.tex
@@ -94,8 +94,8 @@ Stat 215A, Fall 2014}
 
 MISR collected electromagnetic radiation measurements using nine cameras at nine different angles, each of which views the Earth in four spectral bands (blue, green, red, and near-infrared).  MISR collects huge amount of data due to its global coverage at high spatial resolution. Each MISR pixel encompasses 275m$\times$275m region, yielding tremendous amounts of data. Due to the size of the MISR readings and transmission channel constraints, only the red radiances were transmitted at full resolution from all cameras. It was also stated that all four bands have similar reflectance signatures over ice, snow, and clouds. Thus, only the red radiances which have high spatial resolution were used in constructing three features SD, CORR, and NDAI.  In our data, in addition to the three features, five of the nine angles' radiances were given.
 
-\subsection{Features} The nine cameras had different views at the following angles: 70.5\textdegree (Df), 60.0\textdegree (Cf), 45.6\textdegree (Bf), and 26.1\textdegree (Af) in the forward direction; 0.0\textdegree (An) in the nadir direction and 26.1\textdegree (Aa), 45.6\textdegree (Ba), 60.0\textdegree (Ca), and 70.5\textdegree (Da) in the aft direction, where "f" indicated the forward
-direction, and "a" indicates the aft direction. Note that we are only given radiances for angles Df, Cf, Bf, An, Af. The nadir (vertically downward) viewing camera (An) has a strong advantage over cameras from other viewpoints since it is least influenced by atmospheric scattering and least distorted by surface topographic effects. Data derived from two angle Af and Aa cameras were aimed at determining topographic heights and cloud heights by using parallax from these two view angles. The two Bf and Ba cameras are positioned to utilize aerosol sensitivity. Based on theoretical findings that the directionally-oriented reflectance variation over different types of cloud is minimized at a 60.0 degree angle, the two Cf and Ca cameras are positioned at a 60.0 degree angle, which is also considered as crucial due to its significant role in estimating the amount of reflection at each ground point. The high angle view of Df and Da cameras is designed to present maximal sensitivity to off-nadir effects. 
+\subsection{Features} The nine cameras had different views at the following angles: 70.5\textdegree (Df), 60.0\textdegree (Cf), 45.6\textdegree (Bf), and 26.1\textdegree (Af) in the forward direction; 0.0\textdegree (An) in the nadir direction and 26.1\textdegree (Aa), 45.6\textdegree (Ba), 60.0\textdegree (Ca), and 70.5\textdegree (Da) in the aft direction, where `f' indicated the forward
+direction, and `a' indicates the aft direction. Note that we are only given radiances for angles Df, Cf, Bf, An, Af. The nadir (vertically downward) viewing camera (An) has a strong advantage over cameras from other viewpoints since it is least influenced by atmospheric scattering and least distorted by surface topographic effects. Data derived from two angle Af and Aa cameras were aimed at determining topographic heights and cloud heights by using parallax from these two view angles. The two Bf and Ba cameras are positioned to utilize aerosol sensitivity. Based on theoretical findings that the directionally-oriented reflectance variation over different types of cloud is minimized at a 60.0 degree angle, the two Cf and Ca cameras are positioned at a 60.0 degree angle, which is also considered as crucial due to its significant role in estimating the amount of reflection at each ground point. The high angle view of Df and Da cameras is designed to present maximal sensitivity to off-nadir effects. 
 
 The features CORR, SD, and NDAI are an average linear correlation of radiation measurements at different view angles, the standard deviation within groups of MISR angle An camera red radiation measurements, and a ratio between the difference and sum of the mean radiation measurements from the first and fifth angle associated with a particular pixel region, respectively. It was stated that extensive exploratory data analysis combined with specific domain knowledge, such as the fact that ice and snow surfaces scatter radiation more isotropically than clouds, found the three features to be most useful in differentiating surface pixels from cloudy ones. High values of CORR alludes to either cloud-free condition or the presence of low altitude cloud. SD is designed to aid identifying smooth surface where the correlation between different MISR viewpoints are muted by measurement noise. Larger NDAI values imply the presence of clouds.
 
@@ -298,7 +298,7 @@ Here we see the logit probabilites plotted spatially. This should approximate ho
 \caption{Classification results from logit with respect to the expert labels.}
 \end{figure}
 
-We now discuss the trends in misclassification. As depicted in the above figure, we have many more false positives than false negatives with large regions sometimes completely misclassified. These regions are often situated on boundaries of labelled and unlabelled points. Calculation shows the false negative rate to be 7.5$\%$ and the false positive rate to be 11.7$\%$. Models with interaction terms were considered and yielded very slight improvement as measured by drop in data-wide misclassification rate from .104 to .091. However, comparison of the misclassification plots showed that the increased complexity did not resolve the large clusters of false positives observed in each image. Especially concerning areas are the large tracts of false positives on the "island" in the southwest corner of image 1 and the southeast sections of images 2 and 3. Looking at the NDAI images only suggests these areas to be cloudy, but the AN radiance images have dark or uneven patches in these areas. Our model may thus be responding to irregularities in the ground's terrain.
+We now discuss the trends in misclassification. As depicted in the above figure, we have many more false positives than false negatives with large regions sometimes completely misclassified. These regions are often situated on boundaries of labelled and unlabelled points. Calculation shows the false negative rate to be 7.5$\%$ and the false positive rate to be 11.7$\%$. Models with interaction terms were considered and yielded very slight improvement as measured by drop in data-wide misclassification rate from .104 to .091. However, comparison of the misclassification plots showed that the increased complexity did not resolve the large clusters of false positives observed in each image. Especially concerning areas are the large tracts of false positives on the `island' in the southwest corner of image 1 and the southeast sections of images 2 and 3. Looking at the NDAI images only suggests these areas to be cloudy, but the AN radiance images have dark or uneven patches in these areas. Our model may thus be responding to irregularities in the ground's terrain.
 
 \begin{figure}[h]
   \centering 
@@ -354,7 +354,6 @@ We also trained on each image and tested on the remaining two. \\
 \endminipage\hfill
   \caption{Convergence of ROC training on increasing number of quadrants in shuffled order}\label{}
 \end{figure}
-
 
  To test convergence, one of the things we did was increase the training set from including 1 quadrant, to including 2 quadrants, up to including 11 quadrants (using the complement as the test set).  For each of the 3 aforementioned classes of training, we trained on a range of forest sizes, from 2 trees to 50. It was interesting to note that the continuity of increasing the training set by neighbouring quadrants displayed much less convergence than by increasing the training quadrant set in a randomly subsampled way.  The following three plots make this clear.  In the first case....\\
 
